# kno

./: .dockerignore  .env.example  .gh-velocity.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  fly.toml  project-label-sync.yml  pyproject.toml
.githooks/: commit-msg  pre-push
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  feature.yml
.github/scripts/: enforce_issue_close.py  pr_label_sync.py  pr_review_gate.py  pr_validate.py
.github/workflows/: enforce-issue-close.yml  label-sync.yml  labels.yml  pr-label-sync.yml  pr-review-gate.yml  pr-validate.yml
data.seed/skills/cite-sources/: SKILL.md
data.seed/skills/cost-aware-reasoning/: SKILL.md
data.seed/skills/flow-jargon/: SKILL.md
data.seed/skills/monte-carlo-explainer/: SKILL.md
data.seed/skills/vacanti-metrics/: SKILL.md
docs/: design-system.html  design-system.md  ops.md  plan.md  spec.md  tasks.md
docs/adr/: 0001-litellm-gateway.md  0002-langgraph-state-machine.md  0003-shell-sandbox.md  0010-multi-user-isolation.md  0011-checkpointer-colocation.md  0015-kb-substrate-portability.md  0018-kno-lite-scope.md  0019-configuration-and-secrets.md
docs/notes/: data-management.md  dev-flow.md  gh-velocity.md
docs/notes/setup/: local-quickstart.md
src/kno/: __init__.py  config.py
src/kno/api/: __init__.py
src/kno/cli/: __init__.py  main.py
src/kno/services/: __init__.py
src/kno/web/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_deploy.py  test_web_real_uvicorn.py  test_workflow_scripts.py
tests/unit/: test_cli_serve.py  test_config.py  test_smoke.py  test_web.py
